# OpenPixel

./: CMakeLists.txt  build.sh
src/: main.cpp
